# battleform

./: CLAUDE.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.husky/: pre-commit
agents/: claude-agent.ts  openai-agent.ts  package.json
backend/: adonisrc.ts  package-lock.json  package.json
backend/.adonisjs/client/: manifest.d.ts
backend/.adonisjs/server/: controllers.ts  routes.d.ts
backend/app/controllers/: auth_controller.ts  matches_controller.ts  mcp_controller.ts
backend/app/engine/: bot_ai.ts  commands.ts  fog.ts  maps.ts  pathfinding.ts  state.ts
backend/app/models/: auth_identity.ts  match.ts  match_player.ts  user.ts
backend/app/services/: mcp_server.ts  spectator_service.ts
backend/config/: auth.ts  database.ts  session.ts
backend/database/: schema.ts
backend/database/migrations/: 0001_create_users_table.ts  0002_create_auth_identities_table.ts  0004_create_match_players_table.ts  0005_create_match_commands_table.ts  0007_add_multiplayer_columns.ts
backend/start/: ws.ts
backend/tests/functional/: auth.spec.ts
client/: Cargo.toml
client/src/: lib.rs  renderer.rs  state.rs
docs/: overview.md
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: CommandLog.vue  GameCanvas.vue  StatsPanel.vue
frontend/src/lib/: api.ts  bridge.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  match.ts
frontend/src/views/: LobbyView.vue  LoginView.vue  MatchView.vue
game/: .gitignore  Cargo.toml
game/crates/bf_engine/: Cargo.toml
game/crates/bf_engine/src/: bot_ai.rs  commands.rs  fog.rs  lib.rs  maps.rs  mcp.rs  pathfinding.rs
game/crates/bf_game/: Cargo.toml
game/crates/bf_game/src/: camera.rs  game.rs  hud.rs  input.rs  lib.rs  local_match.rs  main.rs  map.rs  render_utils.rs  state.rs  units.rs
game/crates/bf_types/: Cargo.toml
game/crates/bf_types/src/: commands.rs  hex.rs  lib.rs  state.rs
multiplayer_server/: .env.example  package-lock.json
multiplayer_server/app/engine/: bot_ai.ts  fog.ts  game_engine.ts  hex.ts  maps.ts  pathfinding.ts  state.ts
multiplayer_server/app/models/: match_command.ts  match_snapshot.ts
multiplayer_server/app/services/: oauth_account_service.ts
multiplayer_server/config/: ally.ts
multiplayer_server/database/migrations/: 0003_create_matches_table.ts  0006_create_match_snapshots_table.ts
multiplayer_server/start/: env.ts  routes.ts
multiplayer_server/tests/functional/: matches.spec.ts
openspec/changes/bevy-0-18-upgrade/: design.md  proposal.md  tasks.md
openspec/changes/bevy-brp-integration/: design.md  proposal.md  tasks.md
openspec/changes/bevy-migration/: design.md  proposal.md  tasks.md
openspec/changes/hex-grid/: proposal.md
openspec/changes/native-dev-runner/: design.md  proposal.md  tasks.md
openspec/changes/rust-engine/: design.md  proposal.md  tasks.md
openspec/changes/tile-system/: design.md  proposal.md  tasks.md
openspec/specs/agents/: spec.md
openspec/specs/auth/: spec.md
openspec/specs/frontend/: spec.md
openspec/specs/game-client/: spec.md
openspec/specs/game-engine/: spec.md
openspec/specs/match-lobby/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/spectator/: spec.md
(+20 files in other folders)
